Fix button breacking white spaces

--- a/style/src/component/button.less
+++ b/style/src/component/button.less
@@ -7,6 +7,7 @@
   font-size: 13px;
   border: none;
   border-radius: 15px;
+  white-space: nowrap;
   cursor: pointer;
   transition: background-color 250ms ease;
   .no-tap();
